--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,19 +8,30 @@ eureka.client.fetch-registry=false
 eureka.client.service-url.defaultZone=http://localhost:8080/eureka
 #timeout
 eureka.server.wait-time-in-ms-when-sync-empty=0
+######################################################
 #All url come with prefix/api will interpret
-zuul.prefix=/api
-
-zuul.routes.middleware.path=/cart/**
-zuul.routes.middleware.url=http://localhost:8081/
+#zuul.prefix=/api
+#zuul.routes.middleware.path=/cart/**
+#zuul.routes.middleware.url=http://localhost:8081/
 
 #spring data mongo
 #spring.data.mongodb.authentication-database=admin
 #spring.data.mongodb.username=root
 #spring.data.mongodb.password=root
 
-spring.data.mysql.port=3306
-spring.data.mysql.username=user
-spring.data.mysql.password=user
-spring.data.mysql.host=localhost
-spring.data.mysql.database=uaa
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#local DB Details
+#spring.datasource.url=jdbc:mysql://localhost:3306/uaa?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=user
+
+#CF DB Details
+spring.datasource.url=jdbc:mysql://q-n4s3y1.q-g8182.bosh:3306/service_instance_db?useSSL=false
+spring.datasource.username=cb377cd378a94b488d34770d79d0199c
+spring.datasource.password=5v3nmurcf6e26uu0
+
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.default_schema=uaa
+spring.jpa.hibernate.ddl-auto=update
