--- a/pom.xml
+++ b/pom.xml
@@ -26,14 +26,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<dependency>
+	<!-- 	<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-zuul</artifactId>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -134,11 +134,68 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
+				<!-- <configuration>
 					<skipTests>${skipTests}</skipTests>
-				</configuration>
+				</configuration> -->
 			</plugin>
+			
+			<!-- <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <executions>
+                <execution>
+                    <id>validate</id>
+                    <phase>validate</phase>
+                    <configuration>
+                        <encoding>UTF-8</encoding>
+                        <consoleOutput>true</consoleOutput>
+                        <failsOnError>true</failsOnError>
+                        <linkXRef>false</linkXRef>
+                    </configuration>
+                    <goals>
+                        <goal>check</goal>
+                    </goals>
+                </execution>
+            </executions>
+          </plugin>
+          <plugin>
+	           <groupId>org.apache.maven.plugins</groupId>
+		           	<artifactId>maven-pmd-plugin</artifactId>
+		           	<configuration>
+	               		<analysisCache>true</analysisCache> enable incremental analysis
+	               		<analysisCacheLocation>${project.build.directory}/pmd/pmd.cache</analysisCacheLocation> Optional: points to this location by default
+	               		<failOnViolation>true</failOnViolation> this is actually true by default, but can be disabled
+	               		<printFailingErrors>true</printFailingErrors>
+	               </configuration>
+         <executions>
+	          <execution>
+	            <goals>
+	              <goal>check</goal>
+	            </goals>
+	          </execution>
+        </executions>
+         </plugin> -->
+         
+	           <plugin>
+	               <groupId>org.jacoco</groupId>
+	               <artifactId>jacoco-maven-plugin</artifactId>
+	               <version>0.8.2</version>
+	               <executions>
+	                      <execution>
+	                             <goals>
+	                                    <goal>prepare-agent</goal>
+	                             </goals>
+	                      </execution>
+	                      <!-- attached to Maven test phase -->
+	                      <execution>
+	                             <id>report</id>
+	                             <phase>test</phase>
+	                             <goals>
+	                                    <goal>report</goal>
+	                             </goals>
+	                      </execution>
+	               </executions>
+	         </plugin>
 		</plugins>
 	</build>
-
 </project>
