--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,18 @@
 #Name of the application
-spring.application.name=gateway
+spring.application.name=uaa
+
+#######################################################
+
 #This is a eureka server so no need to register
-eureka.client.register-with-eureka=false
+#eureka.client.register-with-eureka=false
+
 #This is a eureka server no need to fetch registry
-eureka.client.fetch-registry=false
+#eureka.client.fetch-registry=false
+
 #Register url for client
-eureka.client.service-url.defaultZone=http://localhost:8080/eureka
+#eureka.client.service-url.defaultZone=http://localhost:8080/eureka
 #timeout
-eureka.server.wait-time-in-ms-when-sync-empty=0
+#eureka.server.wait-time-in-ms-when-sync-empty=0
 ######################################################
 #All url come with prefix/api will interpret
 #zuul.prefix=/api
@@ -19,16 +24,21 @@ eureka.server.wait-time-in-ms-when-sync-empty=0
 #spring.data.mongodb.username=root
 #spring.data.mongodb.password=root
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+######################################################3
+
+
 #local DB Details
-#spring.datasource.url=jdbc:mysql://localhost:3306/uaa?useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password=user
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/uaa?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=user
 
 #CF DB Details
-spring.datasource.url=jdbc:mysql://q-n4s3y1.q-g8182.bosh:3306/service_instance_db?useSSL=false
-spring.datasource.username=cb377cd378a94b488d34770d79d0199c
-spring.datasource.password=5v3nmurcf6e26uu0
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://q-n4s3y1.q-g8182.bosh:3306/service_instance_db?useSSL=false
+#spring.datasource.username=cb377cd378a94b488d34770d79d0199c
+#spring.datasource.password=5v3nmurcf6e26uu0
+
 
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
