--- a/manifest.yml
+++ b/manifest.yml
@@ -2,8 +2,10 @@
 applications: 
 - name: uaa
   path: target/uaa-0.0.1-SNAPSHOT.jar
-  random-route: true
   instances: 1
   memory: 750M
   services:
   - dbService
+  - logit-ssl-drain
+  routes:
+  - route: uaa.apps.cnpsandbox.dryice01.in.hclcnlabs.com
