--- a/manifest.yml
+++ b/manifest.yml
@@ -7,6 +7,6 @@ applications:
   services:
   - dbService
   - log-drain
-  - app-monitoring
+  - newrelic
   routes:
   - route: uaa.apps.cnpsandbox.dryice01.in.hclcnlabs.com
