--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,10 +28,10 @@ spring.application.name=uaa
 
 
 #local DB Details
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/uaa?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=user
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/uaa?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=user
 
 #CF DB Details
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -43,5 +43,5 @@ spring.datasource.password=user
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.default_schema=uaa
+spring.jpa.properties.hibernate.default_schema=service_instance_db
 spring.jpa.hibernate.ddl-auto=update
