--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,16 +28,16 @@ spring.application.name=uaa
 
 
 #local DB Details
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/uaa?useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password=user
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/uaa?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=user
 
 #CF DB Details
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://q-n4s3y1.q-g8182.bosh:3306/service_instance_db?useSSL=false
-spring.datasource.username=cb377cd378a94b488d34770d79d0199c
-spring.datasource.password=5v3nmurcf6e26uu0
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://q-n4s3y1.q-g8182.bosh:3306/service_instance_db?useSSL=false
+#spring.datasource.username=cb377cd378a94b488d34770d79d0199c
+#spring.datasource.password=5v3nmurcf6e26uu0
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
