commented application properties jdbc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.application.name=uaa
 #eureka.client.service-url.defaultZone=http://localhost:8080/eureka
 #timeout
 #eureka.server.wait-time-in-ms-when-sync-empty=0
-######################################################
+###########################################################
 #All url come with prefix/api will interpret
 #zuul.prefix=/api
 #zuul.routes.middleware.path=/cart/**
@@ -24,14 +24,14 @@ spring.application.name=uaa
 #spring.data.mongodb.username=root
 #spring.data.mongodb.password=root
 
-######################################################
+############################################################
 
 
 #local DB Details
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/uaa?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=user
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/uaa?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=user
 
 #CF DB Details
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
