--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 
 		<!-- Logging Dependencies -->
