--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,10 +28,10 @@ spring.application.name=uaa
 
 
 #local DB Details
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/uaa?useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password=user
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/uaa?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=user
 
 #CF DB Details
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
