--- a/pom.xml
+++ b/pom.xml
@@ -55,13 +55,27 @@
 			<version>0.9.1</version>
 		</dependency>
 
-		<!-- correlation ID dependency -->
+		<!-- Tracebility dependency -->
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-sleuth</artifactId>
 		</dependency>
-
+		<dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.zipkin.java</groupId>
+			<artifactId>zipkin-server</artifactId>
+			<version>2.11.7</version>
+		</dependency>
+		<dependency>
+            <groupId>io.zipkin.java</groupId>
+            <artifactId>zipkin-autoconfigure-ui</artifactId>
+            <version>2.11.7</version>
+            <scope>test</scope>
+        </dependency>
 
 		<!-- API UI Dependencies -->
 
