--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #Name of the application
 spring.application.name=uaa
+server.port=9411
 
 #######################################################
 
@@ -31,7 +32,7 @@ spring.application.name=uaa
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/uaa?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=user
+spring.datasource.password=root
 
 #CF DB Details
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -41,3 +42,18 @@ spring.datasource.password=user
 
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
+
+############################################################
+
+#Logging
+logging.level.org.springframework.web=DEBUG
+spring.sleuth.traceId128=true
+spring.sleuth.sampler.probability=1.0
+#logging.pattern.level=[%X{X-B3-TraceId}/%X{X-B3-SpanId}] %-5p [%t] %C{2} - %m%n
+logging.path=logs
+logging.file=${logging.path}/uaa.log
+
+##############################################################
+
+#zipkin
+spring.zipkin.base-url=http://localhost:9411/zipkin
