--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-sleuth</artifactId>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
 		</dependency>
@@ -75,7 +75,7 @@
             <artifactId>zipkin-autoconfigure-ui</artifactId>
             <version>2.11.7</version>
             <scope>test</scope>
-        </dependency>
+        </dependency> -->
 
 		<!-- API UI Dependencies -->
 
@@ -127,11 +127,11 @@
 
 		<!-- Logging Dependencies -->
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.13</version>
-		</dependency>
+		</dependency> -->
 
 	</dependencies>
 
