--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,4 +56,4 @@ logging.file=${logging.path}/uaa.log
 ##############################################################
 
 #zipkin
-spring.zipkin.base-url=http://localhost:9411/zipkin
+#spring.zipkin.base-url=http://localhost:9411/zipkin
