--- a/manifest.yml
+++ b/manifest.yml
@@ -5,8 +5,9 @@ applications:
   instances: 1
   memory: 750M
   services:
-  - dbService
+  - uaadbservice
   - log-drain
   - newrelic
+  - cloud-config-server
   routes:
     - route: uaa.apps.sandbox.cflab01.in.hclcnlabs.com
