--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,46 +1,13 @@
 #Name of the application
 spring.application.name=uaa
-server.port=9411
-
-#######################################################
-
-#This is a eureka server so no need to register
-#eureka.client.register-with-eureka=false
-
-#This is a eureka server no need to fetch registry
-#eureka.client.fetch-registry=false
-
-#Register url for client
-#eureka.client.service-url.defaultZone=http://localhost:8080/eureka
-#timeout
-#eureka.server.wait-time-in-ms-when-sync-empty=0
-###########################################################
-#All url come with prefix/api will interpret
-#zuul.prefix=/api
-#zuul.routes.middleware.path=/cart/**
-#zuul.routes.middleware.url=http://localhost:8081/
-
-#spring data mongo
-#spring.data.mongodb.authentication-database=admin
-#spring.data.mongodb.username=root
-#spring.data.mongodb.password=root
 
 ############################################################
-
 
 #local DB Details
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/uaa?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
-
-#CF DB Details
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://q-n4s3y1.q-g8182.bosh:3306/service_instance_db?useSSL=false
-#spring.datasource.username=cb377cd378a94b488d34770d79d0199c
-#spring.datasource.password=5v3nmurcf6e26uu0
-
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 
 ############################################################
@@ -49,11 +16,23 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework.web=DEBUG
 spring.sleuth.traceId128=true
 spring.sleuth.sampler.probability=1.0
-#logging.pattern.level=[%X{X-B3-TraceId}/%X{X-B3-SpanId}] %-5p [%t] %C{2} - %m%n
 logging.path=logs
 logging.file=${logging.path}/uaa.log
 
 ##############################################################
 
-#zipkin
-#spring.zipkin.base-url=http://localhost:9411/zipkin
+#config server 
+management.endpoint.refresh.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+spring.profiles.active=prod
+management.security.enabled=false
+management.endpoints.web.expose=*
+
+##############################################################
+
+#constants
+token.exp.validity= 1200000;
+
+#################################################################
+
