property file changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ management.endpoints.web.expose=*
 ##############################################################
 
 #constants
-token.exp.validity= 1200000
+#token.exp.validity= 1200000
 
 #################################################################
 
