--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,8 @@ spring.sleuth.sampler.probability=1.0
 logging.path=logs
 logging.file=${logging.path}/uaa.log
 
+spring.zipkin.base-url=http://zipkin-server-courteous-bandicoot.apps.sandbox.cflab01.in.hclcnlabs.com
+
 ##############################################################
 
 #config server 
@@ -31,8 +33,5 @@ management.endpoints.web.expose=*
 
 ##############################################################
 
-#constants
-#token.exp.validity= 1200000
-
-#################################################################
-
+#token expire validity
+token.exp.validity=120000
