--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.sleuth.sampler.probability=1.0
 logging.path=logs
 logging.file=${logging.path}/uaa.log
 
-spring.zipkin.base-url=http://zipkin-server-courteous-bandicoot.apps.sandbox.cflab01.in.hclcnlabs.com
+#spring.zipkin.base-url=http://zipkin-server-courteous-bandicoot.apps.sandbox.cflab01.in.hclcnlabs.com
 
 ##############################################################
 
