--- a/manifest.yml
+++ b/manifest.yml
@@ -3,11 +3,11 @@ applications:
 - name: uaa
   path: target/uaa-0.0.1-SNAPSHOT.jar
   instances: 1
-  memory: 750M
+  memory: 1G
   services:
     - userdbservice
     - cloud-config-server
     - log-drain
-    - appdynamics
+    - newrelic
   routes:
     - route: uaa.apps.sandbox.cflab01.in.hclcnlabs.com
