--- a/manifest.yml
+++ b/manifest.yml
@@ -3,7 +3,8 @@ applications:
 - name: uaa
   path: target/uaa-0.0.1-SNAPSHOT.jar
   instances: 1
-  memory: 750M
+  memory: 2G
+  health-check-type: none
   services:
     - userdbservice
     - cloud-config-server
